# computational_intelligence_2022

./: .gitignore  pyproject.toml
ci_2022/: README.md
ci_2022/lab1/: README.md  lab1.py
ci_2022/utils/: base_search.py
lab1/: README.md  lab1.py  lab1_set-covering.ipynb
lab2/: README.md  lab2.py
lab3/: README.md  __init__.py  lab3_task1.py  lab3_task2.py  lab3_task3.py  lab3_task4.py  prof_lab3_nim.ipynb  prof_sol.py  test_prob.py  utils.py
lab3/RL_maze_example/: Maze.py  RLAgent.py  main.py
lab3/lab3_task4/: Maze.py  RLAgent.py  main.py
tests/: test_computational_intelligence.py
utils/: base_search.py  gx_utils.py
