[tool.poetry]
name = "computational_intelligence_2022"
version = "0.1.0"
description = ""
authors = ["dfm88 <diegof.university@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.23.4"
ipdb = "^0.13.9"
pytest = "^7.1.3"
flake8 = "^5.0.4"
isort = "^5.10.1"
black = "^22.10.0"
memory-profiler = "^0.60.0"
ipykernel = "^6.17.1"
matplotlib = "^3.6.2"

[tool.poetry.group.dev.dependencies]
black = {version = "^22.10.0", allow-prereleases = true}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
